# discord-management-bot2

./: Dockerfile  README.md  discord_bot.py  docker-compose.yml  log_config.json  log_config.py  pyproject.toml
cogs/: logging_messages.py  logging_voice_states.py  message_history.py
models/: __init__.py  logging_model.py
utils/: __init__.py  constant.py  misc.py
